--- a/adventure/index.html
+++ b/adventure/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="prepare.css">
-    <title>User Adventure - Prepare Stage</title>
+    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="adventure.css">
+    <title>User Adventure - Adventure</title>
 </head>
 
 <body>
@@ -18,14 +18,14 @@
     
     <main> 
         <h2>
-            Prepare Stage
+            Adveunture
         </h2>
-        <form id="prepare">
+        <form id="adventure">
             
         </form>
     </main>
 
-    <script type="module" src="prepare.js"></script>
+    <script type="module" src="adventure.js"></script>
 </body>
 
 </html>
